--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 sudo: required
 services: docker
+rvm:
+  - 1.9.3
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq cucumber
