--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ sudo: required
 services: docker
 before_script:
   - gem install cucumber
+  - gem install aruba
 script:
   - cucumber --version
+  - gem list
