Simple Aruba test of command-line executable

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_script:
   - gem install cucumber
   - gem install aruba
 script:
-  - cucumber --version
-  - gem list
+  - ./compile.sh
+  - ./acceptancetest.sh
